# Betting-Dashboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: bets_ledger.csv
data/model_validation/: LightGBM_league_accuracies.json  LightGBM_metrics.json  OutcomePrediction_league_accuracies.json  OutcomePrediction_metrics.json
deprecated/: 5_✔️_Model_Validation.py
src/: Dashboard.py  commons.py  paths.py  setup.py  sidebar.py  📈_Dashboard.py
src/pages/: 0_⏳_Pending_Bets.py  1Leagues.py  1_🏆_Leagues.py  2Odds.py  2_🎲_Odds.py  3ModelOdds.py  3Summaries.py  3_🎲_Model_Odds.py  3_📊_Aggregates.py  3_📊_Summaries.py  4Model_Validation.py  4Summaries.py  4_✔️_Model_Validation.py  4_📊_Summaries.py  4_🚀_Referral.py  5Model_Validation.py  5_✔️_Model_Validation.py  Charts.py  Leagues.py  Odds.py  Summaries.py
styles/: styles.css
utils/: paths.py
