[tool.poetry]
name = "Betting-Dashboard"
version = "2.0.4"
description = "Oracle-Bets' public ledger on LoL games"
authors = ["Yureeh <oracle.bets@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "**/*" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
commitizen = "^3.27.0"
streamlit = "^1.36.0"
plotly = "^5.22.0"
watchdog = "^4.0.1"
flake8-bugbear = "^24.4.26"
flake8-comprehensions = "^3.14.0"
pep8-naming = "^0.14.1"
flake8-docstrings = "^1.7.0"
pre-commit = "^3.7.1"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
bandit = "^1.7.9"
pytest = "^8.2.2"
pytest-cov = "^4.1.0"
numpy = "1.26.4"
gspread = "^6.1.2"
oauth2client = "^4.1.3"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
